--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "express": "^4.17.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
-    "request": "^2.88.0"
+    "nodemon": "^2.0.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
