--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "dependencies": {
     "apollo-server-express": "^1.4.0",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "sequelize": "^5.21.4",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
